# ROAS6000A_Project

./: CMakeLists.txt  README.md  package.xml
FaceRecognition/: package.xml
FaceRecognition/launch/: face_recognition.launch
FaceRecognition/script/: recognition.py  recognitionv1.py  recognitionv2.py  saveSingleFrame.py  ssd_anime_face_detect.py
KeyBoardControl/: CMakeLists.txt  package.xml
KeyBoardControl/script/: teleop.py
KeyBoardControl/src/: KeyBoardControl.cpp
test/: CMakeLists.txt  package.xml
test/launch/: test.launch
test/src/: main.cpp  main.hpp  opencv.cpp
test/src/FSM/: StateMachine.hpp
test/src/FSM/TaskController/: TaskAState.cpp  TaskAState.hpp  TaskBState.cpp  TaskBState.hpp  TaskCState.cpp  TaskCState.hpp  TaskController.cpp  TaskController.hpp  TaskDState.cpp  TaskDState.hpp  TaskEState.cpp  TaskEState.hpp  TaskNULLState.cpp  TaskNULLState.hpp
test/src/FSM/TaskController/TaskCFSM/: TaskCAreaABState.cpp  TaskCAreaABState.hpp  TaskCAreaAState.cpp  TaskCAreaAState.hpp  TaskCAreaBCState.cpp  TaskCAreaBCState.hpp  TaskCAreaBState.cpp  TaskCAreaBState.hpp  TaskCAreaCDState.cpp  TaskCAreaCDState.hpp  TaskCAreaCState.cpp  TaskCAreaCState.hpp  TaskCAreaDState.cpp  TaskCAreaDState.hpp  TaskCAreaPoint.cpp  TaskCAreaPoint.hpp
